ADd heartbeat endpoint and simulators
